syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.t2_applicationtier_springboot.grpc";
option java_outer_classname = "ProductProto";

package t2_applicationtier_springboot;

service ProductService {
  rpc AddProduct (ProductRequest) returns (ProductResponse);
  rpc GetProducts (Empty) returns (ProductListResponse);
}

message ProductRequest {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
}

message ProductResponse {
  bool success = 1;
  string message = 2;
}

message ProductListResponse {
  repeated ProductResponse products = 1;
}

message Empty {}
